apps/hass/zwaveui-proxy/zwaveui-proxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwaveui-proxy
  namespace: hass
spec:
  selector:
    matchLabels:
      app: zwaveui-proxy
  template:
    metadata:
      labels:
        app: zwaveui-proxy
    spec:
      containers:
      - name: zwaveui-proxy
        image: nginx:1.27.0
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
        - containerPort: 3000
          protocol: TCP
          name: websocket
        volumeMounts:
          - mountPath: /etc/nginx/conf.d/
            name: zwaveui-proxy-config
        resources:
          requests:
            memory: 10Mi
            cpu: "5m"
          limits:
            memory: 50Mi
        livenessProbe: &probe
          httpGet:
            path: /
            port: http
        readinessProbe: *probe
      volumes:
      - emptyDir: {}
        name: zwaveui-proxy-config
      - name: zwaveui-proxy-secret
        secret:
          secretName: zwaveui-proxy
